syntax = "proto3";

option go_package = "github.com/hashicorp/vault/physical/raft";

package raft;

message LogOperation {
    // OpType is the Operation type
	uint32 op_type = 1;

	// Flags is an opaque value, currently unused. Reserved.
	uint64 flags   = 2;

	// Key that is being affected
	string key	 = 3;

	// Value is optional, corresponds to the key
	bytes  value   = 4;
}

message LogData {
	repeated LogOperation operations = 1;
}
